--- a/TestForAnger/app/src/main/res/layout/fragment_quest.xml
+++ b/TestForAnger/app/src/main/res/layout/fragment_quest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -16,32 +16,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Вопрос 2134"
+        android:text="@string/title_which_question"
         android:textSize="20sp"
-        />
+        android:layout_below="@+id/home_button" />
 
     <View
+        android:id="@+id/view1"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="@android:color/black"
         android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"/>
+        android:layout_marginRight="5dp"
+        android:layout_below="@+id/quest_title"/>
 
     <TextView
         android:id="@+id/quest_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Если б тебя ...."
         android:textSize="20sp"
-        />
+        android:layout_below="@+id/view1"/>
 
     <View
+        android:id="@+id/view2"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="@android:color/black"
         android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"/>
+        android:layout_marginRight="5dp"
+        android:layout_below="@+id/quest_content"/>
 
     <LinearLayout
         android:id="@+id/answer_yes"
@@ -49,7 +52,8 @@
         android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_below="@+id/view2">
 
         <ImageView
             android:id="@+id/answer_yes_icon"
@@ -62,7 +66,7 @@
             android:id="@+id/answer_yes_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Да"
+            android:text="@string/yes"
             android:textSize="20sp"/>
 
     </LinearLayout>
@@ -73,24 +77,30 @@
         android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_below="@+id/answer_yes">
 
         <ImageView
             android:id="@+id/answer_no_icon"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@android:color/darker_gray"
-            />
+            android:background="@android:color/darker_gray" />
 
         <TextView
             android:id="@+id/answer_no_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Нет"
+            android:text="@string/no"
             android:textSize="20sp"/>
 
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/ok"
+        android:layout_width="108dp"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/btn_default"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"/>
 
-
-</LinearLayout>
+</RelativeLayout>
