--- a/TestForAnger/app/src/main/res/layout/fragment_quest.xml
+++ b/TestForAnger/app/src/main/res/layout/fragment_quest.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background_questions">
 
     <ImageView
         android:id="@+id/home_button"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@android:color/darker_gray"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_width="80dp"
+        android:layout_height="60dp"
+        android:background="@drawable/home_back" />
 
     <TextView
         android:id="@+id/quest_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textStyle="bold"
         android:text="@string/title_which_question"
-        android:textSize="20sp"
+        android:textSize="25sp"
         android:layout_below="@+id/home_button" />
 
     <View
@@ -27,6 +27,7 @@
         android:background="@android:color/black"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/quest_title"/>
 
     <TextView
@@ -44,7 +45,8 @@
         android:background="@android:color/black"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_below="@+id/quest_content"/>
+        android:layout_marginTop="150dp"
+        android:layout_below="@+id/view1" />
 
     <LinearLayout
         android:id="@+id/answer_yes"
@@ -57,16 +59,16 @@
 
         <ImageView
             android:id="@+id/answer_yes_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@android:color/darker_gray"
-            />
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/check_selected" />
 
         <TextView
             android:id="@+id/answer_yes_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/yes"
+            android:layout_marginLeft="10dp"
             android:textSize="20sp"/>
 
     </LinearLayout>
@@ -82,25 +84,28 @@
 
         <ImageView
             android:id="@+id/answer_no_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@android:color/darker_gray" />
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/check_selected" />
 
         <TextView
             android:id="@+id/answer_no_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/no"
+            android:layout_marginLeft="10dp"
             android:textSize="20sp"/>
-
     </LinearLayout>
 
-    <ImageView
+    <Button
         android:id="@+id/ok"
-        android:layout_width="108dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@android:drawable/btn_default"
+        android:background="@drawable/button_forest"
+        android:text="Ok"
+        android:textSize="20sp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"/>
 
 </RelativeLayout>
