--- a/TestForAnger/app/src/main/res/layout/fragment_main.xml
+++ b/TestForAnger/app/src/main/res/layout/fragment_main.xml
@@ -1,33 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    
+    android:layout_height="match_parent"
+    android:background="@drawable/background_wolf_main">
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/wolf_main"
+        android:layout_alignBottom="@+id/linearLayout"
+        android:layout_marginBottom="40dp"
+        android:layout_marginRight="80dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/imageView" />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true">
-        
-        <ImageView
-            android:id="@+id/start"
-            android:src="@android:color/holo_red_dark"
-            android:layout_width="100dp"
-            android:layout_height="60dp" />
+        android:layout_alignParentLeft="true"
+        android:id="@+id/linearLayout">
 
-        <ImageView
-            android:id="@+id/other_test"
-            android:src="@android:color/background_dark"
-            android:layout_width="100dp"
-            android:layout_height="60dp" />
-
-        <ImageView
-            android:id="@+id/exit"
-            android:src="@android:color/holo_blue_bright"
-            android:layout_width="100dp"
-            android:layout_height="60dp" />
-        
     </LinearLayout>
+
+    <Button
+        android:id="@+id/start"
+        android:background="@drawable/pointer_one_wolf_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/imageView"
+        android:text="@string/start_test"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="89dp" />
+
+    <Button
+        android:id="@+id/other_test"
+        android:background="@drawable/pointer_two_wolf_main"
+        android:text="@string/start_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/start"
+        android:layout_marginLeft="25dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:id="@+id/exit"
+        android:background="@drawable/pointer_three_wolf_main"
+        android:text="@string/exit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/other_test"
+        android:layout_marginLeft="30dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
