--- a/TestForAnger/app/src/main/res/layout/fragment_completed_test.xml
+++ b/TestForAnger/app/src/main/res/layout/fragment_completed_test.xml
@@ -82,4 +82,11 @@
             android:layout_marginBottom="107dp" />
 
     </RelativeLayout>
+
+
+
+    <ListView
+        android:id="@+id/result_list_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"></ListView>
 </RelativeLayout>
