--- a/TestForAnger/app/src/main/res/layout/fragment_completed_test.xml
+++ b/TestForAnger/app/src/main/res/layout/fragment_completed_test.xml
@@ -90,8 +90,16 @@
 
 
 
+    <ImageView
+        android:id="@+id/home_button"
+        android:layout_width="80dp"
+        android:layout_height="60dp"
+        android:background="@drawable/home_back" />
+
     <ListView
         android:id="@+id/result_list_view"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/home_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"></ListView>
 
