--- a/TestForAnger/app/src/main/res/layout/fragment_result_test.xml
+++ b/TestForAnger/app/src/main/res/layout/fragment_result_test.xml
@@ -17,6 +17,8 @@
             android:layout_height="wrap_content"
             android:background="@drawable/button_wolf_aggressive"
             android:text="@string/more"
+            android:textSize="22sp"
+            android:textColor="@color/color_button_bright"
             android:layout_alignParentBottom="true"
             android:layout_alignRight="@+id/wolf_agressive"
             android:layout_alignEnd="@+id/wolf_agressive"
@@ -52,7 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/more"
-            android:textSize="20sp"
+            android:textSize="22sp"
             android:background="@drawable/button_wolf"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
@@ -80,6 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/more"
+            android:textSize="22sp"
             android:background="@drawable/button_wolf"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
