--- a/TestForAnger/app/src/main/res/layout/fragment_completed_test.xml
+++ b/TestForAnger/app/src/main/res/layout/fragment_completed_test.xml
@@ -21,6 +21,8 @@
             android:layout_alignParentBottom="true"
             android:layout_alignRight="@+id/wolf_agressive"
             android:layout_alignEnd="@+id/wolf_agressive"
+            android:textColor="@color/color_button_bright"
+            android:textSize="18sp"
             android:text="@string/again"
             android:layout_marginBottom="107dp" />
 
@@ -57,6 +59,7 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:text="@string/again"
+            android:textSize="18sp"
             android:layout_marginBottom="107dp" />
 
     </RelativeLayout>
@@ -82,6 +85,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/button_wolf"
             android:text="@string/again"
+            android:textSize="18sp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="107dp" />
